--- a/nutrixpe_api/src/main/resources/application.properties
+++ b/nutrixpe_api/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://localhost/nutrixpe_db
 spring.datasource.username=postgres
 spring.datasource.password=admin
+spring.datasource.url=jdbc:postgresql://localhost:5432/nutrixpe-db
+
+
