--- a/nutrixpe_api/src/main/resources/application.properties
+++ b/nutrixpe_api/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 spring.jpa.database=postgresql
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/nutrixpe-db
 spring.datasource.username=postgres
 spring.datasource.password=admin
-spring.datasource.url=jdbc:postgresql://localhost:5432/nutrixpe-db
+
 
 
